--- a/employee_register/templates/employee_register/FCL_form.html
+++ b/employee_register/templates/employee_register/FCL_form.html
@@ -1,118 +1,92 @@
-{% load static %}
-{% load crispy_forms_tags %}
+{% load static %} {% load crispy_forms_tags %}
 <!DOCTYPE html>
 <html lang="en">
-{% include 'head.html' %}
+  {% include 'head.html' %}
 
-<body id="page-top">
-
+  <body id="page-top">
     <!-- Page Wrapper -->
     <div id="wrapper">
+      {% include 'sidebar.html'%}
+      <!-- Content Wrapper -->
+      <div id="content-wrapper" class="d-flex flex-column">
+        <!-- Main Content -->
+        <div id="content">
+          {% include 'topbar.html'%}
 
-        {% include 'sidebar.html'%}
-        <!-- Content Wrapper -->
-        <div id="content-wrapper" class="d-flex flex-column">
+          <!-- Begin Page Content -->
+          <div class="container-fluid">
+            <!-- Page Heading -->
+            <h1 class="h3 mb-4 text-gray-800">FCL</h1>
 
-            <!-- Main Content -->
-            <div id="content">
+            <div class="row">
+              <div class="col-lg-12">
+                <!-- Circle Buttons -->
+                <div class="card shadow mb-4">
+                  <div class="card-header py-3">
+                    <h6 class="m-0 font-weight-bold text-primary">
+                      OceanFreight
+                    </h6>
+                  </div>
+                  <div class="card-body">
+                    <p>Input your FCL rate</p>
+                    <!-- Circle Buttons (Default) -->
+                    <div class="table-responsive">
+                      <table
+                        class="table table-bordered"
+                        id="dataTable"
+                        width="100%"
+                        cellspacing="0"
+                      >
+                        <thead>
 
-                {% include 'topbar.html'%}
+                        </thead>
+                        <tfoot></tfoot>
+                        <tbody>
+                          <form action="" method="post" autocomplete="off">
+                            {% csrf_token %}
 
-                <!-- Begin Page Content --> 
-                <div class="container-fluid">
-
-                    <!-- Page Heading -->
-                    <h1 class="h3 mb-4 text-gray-800">FCL</h1>
-
-                    <div class="row">
-
-                        <div class="col-lg-12">
-
-                            <!-- Circle Buttons -->
-                            <div class="card shadow mb-4">
-                                <div class="card-header py-3">
-                                    <h6 class="m-0 font-weight-bold text-primary">OceanFreight</h6>
-                                </div>
-                                <div class="card-body">
-                                    <p>Input your FCL rate</p>
-                                    <!-- Circle Buttons (Default) -->
-                                    <div class="table-responsive">
-
-                                        <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                                            <thead>
-                                                    <!-- <tr>
-                                                    <th>Check date</th>   
-								                    <th>Carrier</th>
-                                                    <th>Origin</th>
-                                                    <th>Destination</th>
-                                                    </tr>
-                                                    <th>20ft</th>
-                                                    <th>40ft</th>
-                                                    <th>frequency</th>
-                                                    <th>T/Time</th>
-                                                    <tr>
-                                                    <th>Effective</th>
-                                                    <th>SC No.</th>
-                                                    <th>PIC</th>
-								                    <th>Remark</th>
-                                                    </tr> -->
-
-                                            </thead>
-                                            <tfoot>
-
-                                            </tfoot>
-                                            <tbody>
-                                                {% if user.is_authenticated %}
-                                                <form action="" method="post" autocomplete="off">
-                                                    {% csrf_token %}
-                                                            
-                                                            <div>{{form.chk_date|as_crispy_field}}</div>
-                                                            <div>{{form.carrier|as_crispy_field}}</div>
-                                                            <div>{{form.origin|as_crispy_field}}</div>
-                                                            <div>{{form.dest|as_crispy_field}}</div>                                                        
-                                                            <div>{{form.twenty|as_crispy_field}}</div>
-                                                            <div>{{form.fourty|as_crispy_field}}</div>
-                                                            <div>{{form.freq|as_crispy_field}}</div>
-                                                            <div>{{form.ttime|as_crispy_field}}</div>                                                          
-                                                            <div>{{form.effective|as_crispy_field}}</div>
-                                                            <div>{{form.scno|as_crispy_field}}</div>
-                                                            <div>{{form.position|as_crispy_field}}</div>
-                                                            <div>{{form.remark|as_crispy_field}}</div>
-                                                            <tr>                                                        
-                                                            <button type="submit" class="btn btn-success btn-block btn-lg"><i class="fas fa-database"></i>
-                                                                Submit</button>
-                                                            <a href="{% url 'FCL_list' %}" class="btn btn-secondary btn-block btn-lg">
-                                                                <i class="fas fa-stream"></i> Back to list
-                                                            </a>
-                                                            </tr>  
-                                                </form>
-                                                
-                                                {%else%}
-                                                
-                                                <h1>로그인 해주세요</h1>
-                                                {%endif%}
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                </div>
-                            </div>                           
-
-                        </div>
-
-                    
+                            <div>{{form.chk_date|as_crispy_field}}</div>
+                            <div>{{form.carrier|as_crispy_field}}</div>
+                            <div>{{form.origin|as_crispy_field}}</div>
+                            <div>{{form.dest|as_crispy_field}}</div>
+                            <div>{{form.twenty|as_crispy_field}}</div>
+                            <div>{{form.fourty|as_crispy_field}}</div>
+                            <div>{{form.freq|as_crispy_field}}</div>
+                            <div>{{form.ttime|as_crispy_field}}</div>
+                            <div>{{form.effective|as_crispy_field}}</div>
+                            <div>{{form.scno|as_crispy_field}}</div>
+                            <div>{{form.position|as_crispy_field}}</div>
+                            <div>{{form.remark|as_crispy_field}}</div>
+                            <tr>
+                              <button
+                                type="submit"
+                                class="btn btn-success btn-block btn-lg"
+                              >
+                                <i class="fas fa-database"></i> Submit
+                              </button>
+                              <a
+                                href="{% url 'FCL_list' %}"
+                                class="btn btn-secondary btn-block btn-lg"
+                              >
+                                <i class="fas fa-stream"></i> Back to list
+                              </a>
+                            </tr>
+                          </form>
+                        </tbody>
+                      </table>
                     </div>
-
+                  </div>
                 </div>
-                <!-- /.container-fluid -->
-
+              </div>
             </div>
-            <!-- End of Main Content -->
-
-            {% include 'footer.html'%}
-
+          </div>
+          <!-- /.container-fluid -->
         </div>
-        <!-- End of Content Wrapper -->
+        <!-- End of Main Content -->
 
+        {% include 'footer.html'%}
+      </div>
+      <!-- End of Content Wrapper -->
     </div>
     <!-- End of Page Wrapper -->
 
@@ -127,8 +101,9 @@
 
     <!-- Custom scripts for all pages-->
     <script src="/static/js/sb-admin-2.min.js"></script>
-    <script src="https://kit.fontawesome.com/999e0851cc.js" crossorigin="anonymous"></script>
-
-</body>
-
+    <script
+      src="https://kit.fontawesome.com/999e0851cc.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
