--- a/employee_register/templates/employee_register/LCL_list.html
+++ b/employee_register/templates/employee_register/LCL_list.html
@@ -3,6 +3,7 @@
 <html lang="en">
 {% include 'head.html' %}
 
+
 <body id="page-top">
 
     <!-- Page Wrapper -->
@@ -10,29 +11,18 @@
 
         {% include 'sidebar.html'%}
         <!-- Content Wrapper -->
-        <div class="modal"> 
-            <div class="modal-content"> 
-                <span class="close-button">&times;</span> 
-                <h1 class="title">메일 보내기</h1> 
-                <form action="#post.php" method="POST"> 
-                  <label for="email">Email</label> 
-                  <input type="email" name="email" placeholder="Your email" required="required"> 
-                  <label></label> 
-                  <textarea name="message" placeholder="Test Message" required="required"></textarea> 
-                  <input type="button" id="cancel" value="취소"> 
-                  <input type="submit" id="submit" value="보내기"> 
-                </form> 
-            </div> 
-        </div>
+
         <div id="content-wrapper" class="d-flex flex-column">
 
             <!-- Main Content -->
             <div id="content">
 
                 {% include 'topbar.html'%}
+                {% if user.is_authenticated %} 
 
                 <!-- Begin Page Content --> 
                 <div class="container-fluid">
+                    
 
                     <!-- Page Heading -->
                     <h1 class="h3 mb-4 text-gray-800">LCL</h1>
@@ -74,6 +64,7 @@
                                                 </form>
                                             </div>
                                         </th>
+                                        
 
                                         <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                                             <thead>
@@ -112,7 +103,7 @@
                                                 </tr>
                                             </tfoot>
                                             <tbody>
-                                                                                              
+                                                                                                 
                                                 <tr>
                                                 {% for lcl in lcl_list %}
                                                 <tr>
@@ -166,6 +157,10 @@
                                             </tr>
                                             </tr>
                                                 {% endfor %}
+                                                {%else%}
+                                                
+                                                <h1>로그인 해주세요</h1>
+                                                {%endif%}
                                             </tbody>
                                             
                                         </table>
@@ -211,5 +206,6 @@
 
 
 </body>
+
 
 </html>
