--- a/employee_register/templates/sidebar.html
+++ b/employee_register/templates/sidebar.html
@@ -44,7 +44,7 @@
         </div>
     </li>
 
-    <!-- Nav Item - Utilities Collapse Menu -->
+    {% comment %} <!-- Nav Item - Utilities Collapse Menu -->
     <li class="nav-item active">
         <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapseUtilities"
             aria-expanded="false" aria-controls="collapseUtilities">
@@ -104,7 +104,7 @@
         <a class="nav-link" href="/main/table.html">
             <i class="fas fa-fw fa-table"></i>
             <span>Tables</span></a>
-    </li>
+    </li> {% endcomment %}
 
     <!-- Divider -->
     <hr class="sidebar-divider d-none d-md-block">
