--- a/employee_register/templates/topbar.html
+++ b/employee_register/templates/topbar.html
@@ -33,7 +33,7 @@
                             </div>
                         </li>
 
-                        <!-- Nav Item - Alerts -->
+                        {% comment %} <!-- Nav Item - Alerts -->
                         <li class="nav-item dropdown no-arrow mx-1">
                             <a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -150,15 +150,22 @@
                             </div>
                         </li>
 
-                        <div class="topbar-divider d-none d-sm-block"></div>
+                        <div class="topbar-divider d-none d-sm-block"></div> {% endcomment %}
 
                         <!-- Nav Item - User Information -->
+                        {% if user.is_authenticated %}
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Douglas McGee</span>
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">                                
+                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Welcome! {{user.username}}</span>
                                 <img class="img-profile rounded-circle"
                                     src="/static/img/undraw_profile.svg">
+                                {%else%}
+                        <li class="nav-item dropdown no-arrow">
+                            <a class="nav-link dropdown-toggle" href="{% url 'users:login' %}" id="userDropdown">          
+                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">LogIn</span>
+                                {%endif%}
+                                
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
