--- a/employee_register/templates/employee_register/FCL_list.html
+++ b/employee_register/templates/employee_register/FCL_list.html
@@ -144,13 +144,8 @@
                             <td style="text-align: center">
                               {{employee.chk_date}}
                             </td>
-                            <td
-                              style="
-                                text-transform: capitalize;
-                                text-align: center;
-                              "
-                            >
-                              {{employee.position}}
+                            <td style="text-align: center">
+                              {{employee.username}}
                             </td>
                             <td
                               style="
@@ -176,10 +171,10 @@
                             >
                               {{employee.carrier}}
                             </td>
-                            <td style="text-align: center">
+                            <td style="text-align: center ; color: red;">
                               ${{employee.twenty}}
                             </td>
-                            <td style="text-align: center">
+                            <td style="text-align: center ; color: red;">
                               ${{employee.fourty}}
                             </td>
                             <td style="text-align: center">
