--- a/employee_register/templates/employee_register/Local_AIR_list.html
+++ b/employee_register/templates/employee_register/Local_AIR_list.html
@@ -22,7 +22,7 @@
                 <div class="container-fluid">
 
                     <!-- Page Heading -->
-                    <h1 class="h3 mb-4 text-gray-800">Air</h1>
+                    <h1 class="h3 mb-4 text-gray-800">Air Local charges</h1>
 
                     <div class="row">
 
@@ -31,7 +31,7 @@
                             <!-- Circle Buttons -->
                             <div class="card shadow mb-4">
                                 <div class="card-header py-3">
-                                    <h6 class="m-0 font-weight-bold text-primary">Air freight</h6>
+                                    <h6 class="m-0 font-weight-bold text-danger">Air Local charges</h6>
                                 </div>
                                 <div class="card-body">
                                     
@@ -39,10 +39,10 @@
                                     <div class="table-responsive">
                                         <th>
                                             <div>
-                                                <a href="{% url 'AIR_insert' %}" >
+                                                <a href="{% url 'Local_AIR_insert' %}" >
                                                     <button type="button" class="btn btn-success" style= "margin-bottom: 1%; margin-top: 0.3%">+ADD</button>
                                                 </a>
-                                                <a href="{% url 'AIR_list' %}" >
+                                                <a href="{% url 'Local_AIR_list' %}" >
                                                     <button type="button" class="btn btn-success" style= "float: right; margin-left: 1%; margin-top: 0.3%">View all</button>
                                                 </a>
                                                 <form
@@ -67,79 +67,48 @@
                                                     
                                                 </tr>
                                                 <tr>
-                                                    <th style="text-align: center;" width="10%">Date</th>
-                                                    <th style="text-align: center;">consol</th>           
-                                                    <th style="text-align: center;">pic</th>
-                                                    <th style="text-align: center;">origin</th>
-                                                    <th style="text-align: center;">dest</th>
-                                                    <th style="text-align: center;">carrier</th>
-                                                    <th style="text-align: center;">min</th>
-                                                    <th style="text-align: center;">normal</th>
-                                                    <th style="text-align: center;">45kg</th>
-                                                    <th style="text-align: center;">100kg</th>
-                                                    <th style="text-align: center;">300kg</th>
-                                                    <th style="text-align: center;">500kg</th>
-                                                    <th style="text-align: center;">1000kg</th>
-                                                    <th width = "5%">Details</th>
-                                                    <th width = "5%">Update</th>
-                                                    <th width = "5%">Delete</th>
+                                                    <th style="text-align: center; width : 5%">Branch</th>
+                                                    <th style="text-align: center; width : 5%">HDC</th>
+                                                    <th style="text-align: center; width : 5%">CLC</th>           
+                                                    <th style="text-align: center; width : 5%">DOC</th>
+                                                    <th style="text-align: center; width : 5%">THC</th>
+                                                    <th style="text-align: center; width : 70%">OTC</th>
+                                                    <th>Remark</th>
+                                                    <th>Update</th>
+                                                    <th>Delete</th>
+                                                    <th>Lastupdate</th>
                                                 
                                                 </tr>
                                             </thead>
                                             <tfoot>
-                                                <tr>
-                                                    <th style="text-align: center;" width="10%">Date</th>
-                                                    <th style="text-align: center;">consol</th>           
-                                                    <th style="text-align: center;">pic</th>
-                                                    <th style="text-align: center;">origin</th>
-                                                    <th style="text-align: center;">dest</th>
-                                                    <th style="text-align: center;">carrier</th>
-                                                    <th style="text-align: center;">min</th>
-                                                    <th style="text-align: center;">normal</th>
-                                                    <th style="text-align: center;">45kg</th>
-                                                    <th style="text-align: center;">100kg</th>
-                                                    <th style="text-align: center;">300kg</th>
-                                                    <th style="text-align: center;">500kg</th>
-                                                    <th style="text-align: center;">1000kg</th>
-                                                    <th width = "5%">Details</th>
-                                                    <th width = "5%">Update</th>
-                                                    <th width = "5%">Delete</th>
-                                                    
-                                                </tr>
+
                                             </tfoot>
                                             <tbody>
                                               <tr>    
-                                                {% for airfreight in airfreight_list %}
-                                                <td style="text-align: center;">{{airfreight.air_chk_date}}</td>
-                                                <td style="text-align: center;">{{airfreight.air_consol}}</td>                
-                                                <td style="text-align: center;">{{airfreight.username}}</td>                                                
-                                                <td style="text-align: center;">{{airfreight.air_origin}}</td>
-                                                <td style="text-align: center;">{{airfreight.air_dest}}</td>
-                                                <td style="text-align: center;">{{airfreight.air_carrier}}</td>
-                                                <td style="text-align: center; color: red;">{{airfreight.air_min}}</td>
-                                                <td style="text-align: center; color: red;">{{airfreight.air_normal}}</td>                
-                                                <td style="text-align: center; color: red;">{{airfreight.air_45kg}} </td>
-                                                <td style="text-align: center; color: red;">{{airfreight.air_100kg}} </td> 
-                                                <td style="text-align: center; color: red;">{{airfreight.air_300kg}} </td>
-                                                <td style="text-align: center; color: red;">{{airfreight.air_500kg}} </td>  
-                                                <td style="text-align: center; color: red;">{{airfreight.air_1000kg}} </td>
-                                                
-                                                <div class="modal fade" id="viewdetail{{airfreight.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+                                                {% for localairfreight in Local_airfreight_list %}
+
+                                                <td style="text-align: center;">{{localairfreight.Loc_branch}}</td>
+                                                <td style="text-align: center;">${{localairfreight.Loc_Air_Hdc}}/{{localairfreight.Loc_Air_Hdcunit}}</td>
+                                                <td style="text-align: center;">${{localairfreight.Loc_Air_Clc}}/{{localairfreight.Loc_Air_Clcunit}}</td>                
+                                                <td style="text-align: center;">${{localairfreight.Loc_Air_Doc}}/{{localairfreight.Loc_Air_Docunit}}</td>                                                
+                                                <td style="text-align: center;">${{localairfreight.Loc_Air_Thc}}/{{localairfreight.Loc_Air_Thcunit}}</td>
+                                                <td style="text-align: center;">{{localairfreight.Loc_Air_Otc}}</td>
+                                                            
+                                                        </div>
+                                                        
+                                                        <div class="modal fade" id="viewdetail{{localairfreight.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
                                                 aria-hidden="true">
                                                 <div class="modal-dialog" role="document">
                                                     <div class="modal-content">
                                                         <div class="modal-header">
-                                                            <h5 class="modal-title" id="exampleModalLabel">Others</h5>
+                                                            <h5 class="modal-title" id="exampleModalLabel">Remark</h5>
                                                             <button class="close" type="button" data-dismiss="modal" aria-label="Close">
                                                                 <span aria-hidden="true">×</span>
                                                             </button>
                                                         </div>
                                                         <div class="modal-body">
-                                                            <p>Remark : {{airfreight.air_remark}}</p>
-                                                            <p>T/S point : {{airfreight.air_tspoint}} </p>
-                                                            <p>FSC : {{airfreight.air_fsc}} </p>
-                                                            <p>ISS : {{airfreight.air_iss}} </p>
-                                                            
+                                                            <p>{{localairfreight.Loc_Air_Remark}}</p>
+
                                                         </div>
                                                         <div class="modal-footer">
                                                             <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
@@ -147,25 +116,29 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                                <td style="text-align: center;"><a class="btn btn-primary btn-circle btn-sm" data-toggle="modal" data-target="#viewdetail{{airfreight.id}}">
+                                                <td style="text-align: center;"><a class="btn btn-primary btn-circle btn-sm" data-toggle="modal" data-target="#viewdetail{{localairfreight.id}}">
                                                     <i class="fa-solid fa-magnifying-glass"></i>
                                                     
                                                 </a>
-                                                
+                                                    </div>
+                                                </div>
+                                            </div>
+
                                                 <td style="text-align: center;">
-                                                <a href="{% url 'AIR_update' airfreight.id %}">
+                                                <a href="{% url 'Local_AIR_update' localairfreight.id %}">
                                                     <button type="button" class="btn btn-warning btn-circle btn-sm " id = "update" >
                                                         <i class="fas fa-pen"></i>
                                                         </button></a>
                                                 </td>
                                                 
                                                 <td style="text-align: center;">
-                                                <form action="{% url 'AIR_delete' airfreight.id %}" method="post" class="d-inline">
+                                                <form action="{% url 'Local_AIR_delete' localairfreight.id %}" method="post" class="d-inline">
                                                     {% csrf_token %}
                                                     <button type="submit" class="btn btn-danger btn-circle btn-sm"  id = "delete" >
                                                         <i class="fas fa-trash"></i>
                                                     </button></form>
                                                 </td>
+                                                <td style="text-align: center;">{{localairfreight.username}}</td>
                                               </tr>
                                                 {% endfor %}   
                                             </tbody>
