--- a/employee_register/templates/employee_register/searchair.html
+++ b/employee_register/templates/employee_register/searchair.html
@@ -3,6 +3,7 @@
 <html lang="en">
 {% include 'head.html' %}
 
+
 <body id="page-top">
 
     <!-- Page Wrapper -->
@@ -21,7 +22,7 @@
                 <div class="container-fluid">
 
                     <!-- Page Heading -->
-                    <h1 class="h3 mb-4 text-gray-800">Buttons</h1>
+                    <h1 class="h3 mb-4 text-gray-800">Air</h1>
 
                     <div class="row">
 
@@ -39,19 +40,19 @@
                                         <th>
                                             <div>
                                                 <a href="{% url 'AIR_insert' %}" >
-                                                    <button type="button" class="btn btn-success" style= "margin-bottom: 1%;">+ADD</button>
+                                                    <button type="button" class="btn btn-success" style= "margin-bottom: 1%; margin-top: 0.3%">+ADD</button>
                                                 </a>
                                                 <a href="{% url 'AIR_list' %}" >
-                                                    <button type="button" class="btn btn-success" style= "float: right; margin-left: 1%;">View all</button>
+                                                    <button type="button" class="btn btn-success" style= "float: right; margin-left: 1%; margin-top: 0.3%">View all</button>
                                                 </a>
                                                 <form
                                                 class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search" style="float: right; margin-top: 10%;"
                                                 action="{% url 'searchair' %}" method="get">
                                                 <div class="input-group" >
-                                                    <input type="text" class="form-control bg-light border-0 small" placeholder="Search For ..."
-                                                        aria-label="Search" aria-describedby="basic-addon2" name="q" value="{{ q }}">
+                                                    <input type="text" class="form-control bg-light border-0 small" placeholder="Search for ..."
+                                                        aria-label="Search" aria-describedby="basic-addon2" name="q" value="{{ q }}" style="margin-top: 3%;margin-right: 3%;">
                                                     <div class="input-group-append">
-                                                        <button class="btn btn-primary" type="submit">
+                                                        <button class="btn btn-primary" type="submit" style="margin-top: 10%;margin-right: 3%;">
                                                             <i class="fas fa-search fa-sm"></i>
                                                         </button>
                                                     </div>
@@ -66,72 +67,99 @@
                                                     
                                                 </tr>
                                                 <tr>
-                                                    <td>consol</td>            
-                                                    <td>pic</td>
-                                                    <td>chk_date</td>
-                                                    <td>origin</td>
-                                                    <td>dest</td>
-                                                    <td>carrier</td>
-                                                    <td>min</td>
-                                                    <td>normal</td>
-                                                    <td>45kg</td>
-                                                    <td>100kg</td>
-                                                    <td>300kg</td>
-                                                    <td>500kg</td>
-                                                    <td>1000kg</td>
-                                                    <td>fsc</td>
-                                                    <td>tspoint</td>
-                                                    <td>schedule</td>                                                    
+                                                    <th style="text-align: center;" width="10%">Date</th>
+                                                    <th style="text-align: center;">consol</th>           
+                                                    <th style="text-align: center;">pic</th>
+                                                    <th style="text-align: center;">origin</th>
+                                                    <th style="text-align: center;">dest</th>
+                                                    <th style="text-align: center;">carrier</th>
+                                                    <th style="text-align: center;">min</th>
+                                                    <th style="text-align: center;">normal</th>
+                                                    <th style="text-align: center;">45kg</th>
+                                                    <th style="text-align: center;">100kg</th>
+                                                    <th style="text-align: center;">300kg</th>
+                                                    <th style="text-align: center;">500kg</th>
+                                                    <th style="text-align: center;">1000kg</th>
+                                                    <th width = "5%">Details</th>
+                                                    <th width = "5%">Update</th>
+                                                    <th width = "5%">Delete</th>
+                                                
                                                 </tr>
                                             </thead>
                                             <tfoot>
                                                 <tr>
-                                                    <td>consol</td>            
-                                                    <td>pic</td>
-                                                    <td>chk_date</td>
-                                                    <td>origin</td>
-                                                    <td>dest</td>
-                                                    <td>carrier</td>
-                                                    <td>min</td>
-                                                    <td>normal</td>
-                                                    <td>45kg</td>
-                                                    <td>100kg</td>
-                                                    <td>300kg</td>
-                                                    <td>500kg</td>
-                                                    <td>1000kg</td>
-                                                    <td>fsc</td>
-                                                    <td>tspoint</td>
-                                                    <td>schedule</td>                                                    
+                                                    <th style="text-align: center;" width="10%">Date</th>
+                                                    <th style="text-align: center;">consol</th>           
+                                                    <th style="text-align: center;">pic</th>
+                                                    <th style="text-align: center;">origin</th>
+                                                    <th style="text-align: center;">dest</th>
+                                                    <th style="text-align: center;">carrier</th>
+                                                    <th style="text-align: center;">min</th>
+                                                    <th style="text-align: center;">normal</th>
+                                                    <th style="text-align: center;">45kg</th>
+                                                    <th style="text-align: center;">100kg</th>
+                                                    <th style="text-align: center;">300kg</th>
+                                                    <th style="text-align: center;">500kg</th>
+                                                    <th style="text-align: center;">1000kg</th>
+                                                    <th width = "5%">Details</th>
+                                                    <th width = "5%">Update</th>
+                                                    <th width = "5%">Delete</th>
+                                                    
                                                 </tr>
                                             </tfoot>
                                             <tbody>
                                               <tr>    
                                                 {% for airfreight in airfreight_list %}
-                                                <td>{{airfreight.air_consol}}</td>                
-                                                <td>{{airfreight.air_pic}}</td>
-                                                <td>{{airfreight.air_chk_date}}</td>
-                                                <td>{{airfreight.air_origin}}</td>
-                                                <td>{{airfreight.air_dest}}</td>
-                                                <td>{{airfreight.air_carrier}}</td>
-                                                <td>{{airfreight.air_min}}</td>
-                                                <td>{{airfreight.air_normal}}</td>                
-                                                <td>{{airfreight.air_45kg}} </td>
-                                                <td>{{airfreight.air_100kg}} </td> 
-                                                <td>{{airfreight.air_300kg}} </td>
-                                                <td>{{airfreight.air_500kg}} </td>  
-                                                <td>{{airfreight.air_1000kg}} </td>
-                                                <td>{{airfreight.air_fsc}} </td>
-                                                <td>{{airfreight.air_iss}} </td>
-                                                <td>{{airfreight.air_tspoint}} </td>
+                                                <td style="text-align: center;">{{airfreight.air_chk_date}}</td>
+                                                <td style="text-align: center;">{{airfreight.air_consol}}</td>                
+                                                <td style="text-align: center;">{{airfreight.username}}</td>                                                
+                                                <td style="text-align: center;">{{airfreight.air_origin}}</td>
+                                                <td style="text-align: center;">{{airfreight.air_dest}}</td>
+                                                <td style="text-align: center;">{{airfreight.air_carrier}}</td>
+                                                <td style="text-align: center; color: red;">{{airfreight.air_min}}</td>
+                                                <td style="text-align: center; color: red;">{{airfreight.air_normal}}</td>                
+                                                <td style="text-align: center; color: red;">{{airfreight.air_45kg}} </td>
+                                                <td style="text-align: center; color: red;">{{airfreight.air_100kg}} </td> 
+                                                <td style="text-align: center; color: red;">{{airfreight.air_300kg}} </td>
+                                                <td style="text-align: center; color: red;">{{airfreight.air_500kg}} </td>  
+                                                <td style="text-align: center; color: red;">{{airfreight.air_1000kg}} </td>
                                                 
-                                                <td>
+                                                <div class="modal fade" id="viewdetail{{airfreight.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+                                                aria-hidden="true">
+                                                <div class="modal-dialog" role="document">
+                                                    <div class="modal-content">
+                                                        <div class="modal-header">
+                                                            <h5 class="modal-title" id="exampleModalLabel">Others</h5>
+                                                            <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                                                                <span aria-hidden="true">×</span>
+                                                            </button>
+                                                        </div>
+                                                        <div class="modal-body">
+                                                            <p>Remark : {{airfreight.air_remark}}</p>
+                                                            <p>T/S point : {{airfreight.air_tspoint}} </p>
+                                                            <p>FSC : {{airfreight.air_fsc}} </p>
+                                                            <p>ISS : {{airfreight.air_iss}} </p>
+                                                            
+                                                        </div>
+                                                        <div class="modal-footer">
+                                                            <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                                <td style="text-align: center;"><a class="btn btn-primary btn-circle btn-sm" data-toggle="modal" data-target="#viewdetail{{airfreight.id}}">
+                                                    <i class="fa-solid fa-magnifying-glass"></i>
+                                                    
+                                                </a>
+                                                
+                                                <td style="text-align: center;">
                                                 <a href="{% url 'AIR_update' airfreight.id %}">
                                                     <button type="button" class="btn btn-warning btn-circle btn-sm " id = "update" >
                                                         <i class="fas fa-pen"></i>
                                                         </button></a>
                                                 </td>
                                                 
-                                                <td>
+                                                <td style="text-align: center;">
                                                 <form action="{% url 'AIR_delete' airfreight.id %}" method="post" class="d-inline">
                                                     {% csrf_token %}
                                                     <button type="submit" class="btn btn-danger btn-circle btn-sm"  id = "delete" >
@@ -177,7 +205,9 @@
 
     <!-- Custom scripts for all pages-->
     <script src="/static/js/sb-admin-2.min.js"></script>
+    <script src="https://kit.fontawesome.com/999e0851cc.js" crossorigin="anonymous"></script>
 
 </body>
+
 
 </html>
