--- a/employee_register/templates/sidebar.html
+++ b/employee_register/templates/sidebar.html
@@ -34,7 +34,7 @@
             <i class="fas fa-fw fa-cog"></i>
             <span>Our Net Rate</span>
         </a>
-        <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
                 <h6 class="collapse-header">Mode:</h6>
                 <a class="collapse-item" href="/main/FCL_list.html">FCL</a>
@@ -44,21 +44,21 @@
         </div>
     </li>
 
-    {% comment %} <!-- Nav Item - Utilities Collapse Menu -->
-    <li class="nav-item active">
-        <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapseUtilities"
+    <!-- Nav Item - Utilities Collapse Menu -->
+    <li class="nav-item ">
+        <a class="nav-link " href="#" data-toggle="collapse" data-target="#collapseUtilities"
             aria-expanded="false" aria-controls="collapseUtilities">
             <i class="fas fa-fw fa-wrench"></i>
-            <span>Utilities</span>
+            <span>Local Charges</span>
         </a>
         <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
             data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
                 <h6 class="collapse-header">Custom Utilities:</h6>
-                <a class="collapse-item" href="/main/utilities-color.html">Colors</a>
-                <a class="collapse-item" href="/main/utilities-border.html">Borders</a>
-                <a class="collapse-item" href="/main/utilities-animation.html">Animations</a>
-                <a class="collapse-item active" href="/main/utilities-other.html">Other</a>
+                <a class="collapse-item" href="/main/utilities-color.html">FCL</a>
+                <a class="collapse-item" href="/main/Local_LCL_list.html">LCL</a>
+                <a class="collapse-item" href="/main/Local_AIR_list.html">AIR</a>
+                <a class="collapse-item" href="/main/utilities-other.html">FERRY</a>
             </div>
         </div>
     </li>
@@ -104,7 +104,7 @@
         <a class="nav-link" href="/main/table.html">
             <i class="fas fa-fw fa-table"></i>
             <span>Tables</span></a>
-    </li> {% endcomment %}
+    </li>
 
     <!-- Divider -->
     <hr class="sidebar-divider d-none d-md-block">
