--- a/static/css/sb-admin-2.css
+++ b/static/css/sb-admin-2.css
@@ -11404,3 +11404,8 @@ textarea{
   transform: scale(1.0); 
   transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s; 
 } 
+
+.lclform{
+  width: 5px;
+  color: red
+}
